@@ -84,8 +84,8 @@ $ACLOCAL
 unset AUTOMAKE_JOBS
 AUTOMAKE_run 0 --add-missing
 mv stderr expected
-makefile_ins=`find . -name Makefile.in`
-for file in $makefile_ins; do
+Makefile_ins=`find . -name Makefile.in`
+for file in $Makefile_ins; do
   mv $file $file.exp
 done
 
@@ -96,7 +96,7 @@ for run in 1 2 3 4 5 6 7; do
   rm -f build-aux/* sub*/Makefile.in
   AUTOMAKE_run 0 --add-missing
   diff stderr expected
-  for file in $makefile_ins; do
+  for file in $Makefile_ins; do
     diff $file $file.exp
   done
 done
