@@ -1,3 +1,9 @@
+2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix maintainer-check failure.
+	* tests/parallel-am.test: Rename variable to not match pattern
+	used in maintainer-check.
+
 2008-10-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* NEWS: Fix typo.
